--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "react": "^16.6.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5",
     "react-scroll": "^1.7.10"
