--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.6.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.6.0",
+    "react-icons": "^4.2.0",
     "react-scripts": "2.0.5",
     "react-scroll": "^1.7.10"
   },
